syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";

message DeactivateProtocolTx {
  //Address of the protocol that needs to deactivate
  string address = 1;

  google.protobuf.Any data = 15;
}
