syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";

message PokeTx {
  // type url: fg:x:poke
  string date = 1;
  string address = 2;

  // forge won't touch this field. Only forge app shall handle it.
  google.protobuf.Any data = 15;
}
