syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";
import "type.proto";

message RetrieveSwapTx {
  // The address of the swap state.
  string address = 1;
  // The origin value of the random number.
  bytes hashkey = 2;

  // forge won't touch this field. Only forge app shall handle it.
  google.protobuf.Any data = 15;
}
